Added cors + aspect changes + minor api tweaks
