# src/main/java/com/example/ism/model/User.java
@@ -22,5 +22,13 @@ public class User {
 
     private String phoneNumber;
 
-
+    @Override
+    public String toString() {
+        return "User{" +
+                "id=" + id +
+                ", email='" + email + '\'' +
+                ", password='" + password + '\'' +
+                ", phoneNumber='" + phoneNumber + '\'' +
+                '}';
+    }
 }
