# src/main/resources/openapi_spec.yaml
@@ -338,32 +338,44 @@ paths:
         '500':
           description: Internal server error
   /user/login:
-    get:
+    post:
       tags:
         - user
       summary: Logs user into the system
       description: ''
       operationId: loginUser
-      parameters:
-        - name: email
-          in: query
-          description: The email for login
-          required: false
-          schema:
-            type: string
-        - name: password
-          in: query
-          description: The password for login in clear text
-          required: false
-          schema:
-            type: string
+      requestBody:
+        description: The email and password for login
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  example: jack@gmail.com
+                password:
+                  type: string
+                  example: '12345'
+#        - name: email
+#          in: query
+#          description: The email for login
+#          required: false
+#          schema:
+#            type: string
+#        - name: password
+#          in: query
+#          description: The password for login in clear text
+#          required: false
+#          schema:
+#            type: string
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/UserDTO'
         '400':
           description: Invalid username/password supplied
   /user/logout:
@@ -373,8 +385,12 @@ paths:
       summary: Logs out current logged in user session
       operationId: logoutUser
       responses:
-        default:
+        200:
           description: successful operation
+          content:
+            application/json:
+              schema:
+                type: boolean
 
   /tasks:
     get:
